Bug Fixes and updates for custom training data

--- a/training/ner_model_training.ipynb
+++ b/training/ner_model_training.ipynb
@@ -34,23 +34,12 @@
     "current_loss = 0\r\n",
     "training_data_init = train_data_init"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<spacy.pipeline.ner.EntityRecognizer at 0x2220d511ca0>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 2
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "'''\r\n",
     "@author Ervin Joa\r\n",
@@ -69,7 +58,7 @@
     "        \r\n",
     "    optimizer = nlp.initialize(lambda: examples)\r\n",
     "\r\n",
-    "    for i in range(30):\r\n",
+    "    for i in range(40):\r\n",
     "        random.shuffle(examples)\r\n",
     "        for batch in minibatch(examples, size = compounding(1., 32., 1.001)):\r\n",
     "            nlp.update(\r\n",
@@ -89,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "source": [
     "current_loss = train_ner_model(training_data_init)"
    ],
@@ -98,7 +87,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Losses:  {'ner': 3411.014173047471}\n"
+      "Losses:  {'ner': 5632.861007106758}\n"
      ]
     }
    ],
@@ -106,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "source": [
     "'''\r\n",
     "@author Ervin Joa\r\n",
@@ -148,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "source": [
     "def from_csv_to_train_data(datadf, label, colname):\r\n",
     "    output = []\r\n",
@@ -166,11 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "source": [
     "def filter_dataframe_count(df, col_name):\r\n",
     "    df['word_count'] = df[col_name].str.split().str.len()\r\n",
-    "    df_new = df[df['word_count'] <= 2].drop(columns=[\"word_count\"], axis=0)\r\n",
+    "    df_new = df[(df['word_count'] <= 4) & (df['word_count'] > 1)].drop(columns=[\"word_count\"], axis=0)\r\n",
     "\r\n",
     "    return df_new.reset_index(drop=True)"
    ],
@@ -179,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "source": [
     "data_vars = pd.read_csv(\"../training/training_data/varaible_data.csv\")\r\n",
     "data_refs = pd.read_csv(\"../training/training_data/reference_data.csv\")\r\n",
@@ -196,7 +185,6 @@
     "# For all Files filter data-entries that are <= 4 words\r\n",
     "\r\n",
     "data_vars = filter_dataframe_count(data_vars, data_vars.iloc[:, 0].name)\r\n",
-    "data_refs = filter_dataframe_count(data_refs, data_refs.iloc[:, 0].name)\r\n",
     "data_timepoint_1 = filter_dataframe_count(data_timepoint_1, data_timepoint_1.iloc[:, 0].name)\r\n",
     "data_change = filter_dataframe_count(data_change, data_change.iloc[:, 0].name)\r\n",
     "data_condition = filter_dataframe_count(data_condition, data_condition.iloc[:, 0].name)\r\n",
@@ -212,24 +200,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "source": [
     "print(len(data_var_training))\r\n",
     "print(len(data_ref_training))\r\n",
     "print(len(data_timepoint_training))\r\n",
     "print(len(data_change_training))\r\n",
-    "print(len(data_condition_training))"
+    "print(len(data_condition_training))\r\n",
+    "print(len(train_data_init))"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "682\n",
-      "9\n",
+      "663\n",
+      "13\n",
       "162\n",
-      "10251\n",
-      "35602\n"
+      "17744\n",
+      "64226\n",
+      "150\n"
      ]
     }
    ],
@@ -237,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "source": [
     "'''\r\n",
     "@author Ervin Joa\r\n",
@@ -251,41 +241,25 @@
     "'''\r\n",
     "\r\n",
     "while current_loss > 100:\r\n",
+    "    # Due to huge amount of data, randomize and select first 300 entries\r\n",
     "    data_var_training_random = random.sample(data_var_training, len(data_var_training))\r\n",
     "    data_change_training_random = random.sample(data_change_training, len(data_change_training))\r\n",
     "    data_condition_training_random = random.sample(data_condition_training, len(data_condition_training))\r\n",
     "\r\n",
-    "    training_data = data_ref_training + data_change_training_random[0:300] + data_timepoint_training + data_var_training_random[0:300] + data_condition_training_random[0:300] + train_data_init\r\n",
+    "    # Creation of the training dataset for training \r\n",
+    "    training_data = data_ref_training + data_change_training_random[0:300] + data_timepoint_training + \\\r\n",
+    "    data_var_training_random[0:300] + data_condition_training_random[0:300] + train_data_init\r\n",
+    "\r\n",
+    "    # Shuffeling and selecting the first 500 entries for training\r\n",
     "    data_to_train = random.sample(training_data, len(training_data))\r\n",
-    "    \r\n",
     "    data_to_train_portion = data_to_train[0:500]\r\n",
     "\r\n",
+    "    # Training and display of the traing-loss for each session\r\n",
     "    current_loss = resume_train_ner_model(data_to_train_portion)\r\n",
     "    print(f\"Done Training iteration with loss of {current_loss}\")\r\n",
     "    "
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[('Microhaemorrhage', {'entities': [(0, 16, 'Condition')]}), ('fallopian tubes', {'entities': [(0, 15, 'Variable')]}), ('Change in baseline insulin satisfaction at 12 months', {'entities': [(0, 6, 'Change'), (10, 18, 'Reference'), (19, 39, 'Variable'), (43, 52, 'Timepoint')]}), ('Change in HbA1c', {'entities': [(0, 15, 'Change')]}), ('Kilogram', {'entities': [(0, 8, 'Change')]}), ('Nasal Intubation', {'entities': [(0, 16, 'Condition')]}), ('Unit/kilogram (U/kg)', {'entities': [(0, 20, 'Change')]}), ('Pg/mL', {'entities': [(0, 5, 'Change')]}), ('8 Years', {'entities': [(0, 7, 'Timepoint')]}), ('collisions', {'entities': [(0, 10, 'Change')]})]\n",
-      "Done Training iteration with loss of 3379.1869744131377\n",
-      "[('Target Lesions', {'entities': [(0, 14, 'Variable')]}), ('pen needles', {'entities': [(0, 11, 'Variable')]}), ('Primary Glioblastoma', {'entities': [(0, 20, 'Condition')]}), ('Dialyzers', {'entities': [(0, 9, 'Variable')]}), ('Afterschool Programs', {'entities': [(0, 20, 'Variable')]}), ('Barthel score', {'entities': [(0, 13, 'Change')]}), ('Tachograms', {'entities': [(0, 10, 'Variable')]}), ('Pulmonary Procedures', {'entities': [(0, 20, 'Condition')]}), ('Elderly Patiënts', {'entities': [(0, 16, 'Condition')]}), ('Grammes', {'entities': [(0, 7, 'Change')]})]\n",
-      "Done Training iteration with loss of 2224.793273655447\n",
-      "[('HIV, Inflammation', {'entities': [(0, 17, 'Condition')]}), ('Pharmacy', {'entities': [(0, 8, 'Variable')]}), ('Proteolytic System', {'entities': [(0, 18, 'Condition')]}), ('Hip Effusion', {'entities': [(0, 12, 'Condition')]}), ('log mg/ml', {'entities': [(0, 9, 'Change')]}), ('Hepatocellular Carcinoma.', {'entities': [(0, 25, 'Condition')]}), ('Chronic Bronchiectasis', {'entities': [(0, 22, 'Condition')]}), ('53 Months', {'entities': [(0, 9, 'Timepoint')]}), ('sessions', {'entities': [(0, 8, 'Variable')]}), ('mL/Kg/min', {'entities': [(0, 9, 'Change')]})]\n",
-      "Done Training iteration with loss of 2010.3382972378129\n",
-      "[('Adjusted Mean Change From Baseline in Fasting Plasma Glucose at Week 24 (Last Observation Carried Forward [LOCF])', {'entities': [(0, 20, 'Change'), (26, 34, 'Reference'), (38, 60, 'Variable'), (64, 71, 'Timepoint')]}), ('Physician Communication', {'entities': [(0, 23, 'Condition')]}), ('Images', {'entities': [(0, 6, 'Variable')]}), ('Number', {'entities': [(0, 6, 'Reference')]}), ('Nimotuzumab', {'entities': [(0, 11, 'Condition')]}), ('Questionnaires', {'entities': [(0, 14, 'Variable')]}), ('Treatments', {'entities': [(0, 10, 'Variable')]}), ('Treatment groups', {'entities': [(0, 16, 'Variable')]}), ('7 Years', {'entities': [(0, 7, 'Timepoint')]}), ('Depressive Episode', {'entities': [(0, 18, 'Condition')]})]\n",
-      "Done Training iteration with loss of 1215.798828350549\n",
-      "[('Tooth surfaces', {'entities': [(0, 14, 'Variable')]}), ('pulmonary veins', {'entities': [(0, 15, 'Variable')]}), ('ng equivalents*h/ml', {'entities': [(0, 19, 'Change')]}), ('Case Management', {'entities': [(0, 15, 'Condition')]}), ('Sport Injury', {'entities': [(0, 12, 'Condition')]}), ('HAART Non-Adherence', {'entities': [(0, 19, 'Condition')]}), ('Gallbladder Carcinoma', {'entities': [(0, 21, 'Condition')]}), ('CCTA Scans', {'entities': [(0, 10, 'Variable')]}), ('bleeds', {'entities': [(0, 6, 'Variable')]}), ('24 Years', {'entities': [(0, 8, 'Timepoint')]})]\n",
-      "Done Training iteration with loss of 1279.8006921844662\n",
-      "[('Hair follicles', {'entities': [(0, 14, 'Change')]}), ('Recurrence, Detection rate per patient of PET-PSMA for the detection of biochemical recurrence.', {'entities': [(0, 10, 'Change'), (12, 38, 'Reference'), (42, 50, 'Variable'), (72, 94, 'Variable')]}), ('12 Days', {'entities': [(0, 7, 'Timepoint')]}), ('Patient Records', {'entities': [(0, 15, 'Variable')]}), ('Units (U)/kg', {'entities': [(0, 12, 'Change')]}), ('Millimoles/liter', {'entities': [(0, 16, 'Change')]}), ('Juvenile Myopia', {'entities': [(0, 15, 'Condition')]}), ('Fold increase', {'entities': [(0, 13, 'Change')]}), ('Percent Saturation', {'entities': [(0, 18, 'Change')]}), ('Migraine attacks', {'entities': [(0, 16, 'Variable')]})]\n",
-      "Done Training iteration with loss of 1369.78641661252\n",
-      "[('MINUTES', {'entities': [(0, 7, 'Change')]}), ('ABI Value', {'entities': [(0, 9, 'Change')]}), ('Surveys', {'entities': [(0, 7, 'Variable')]}), ('Lymph nodes', {'entities': [(0, 11, 'Variable')]}), ('manual maps', {'entities': [(0, 11, 'Variable')]}), ('Visit Connections', {'entities': [(0, 17, 'Variable')]}), ('Polysomnographic recording of nocturnal sleep', {'entities': [(17, 45, 'Variable')]}), ('ears', {'entities': [(0, 4, 'Variable')]}), ('events', {'entities': [(0, 6, 'Variable')]}), ('Abstinence Syndrome', {'entities': [(0, 19, 'Condition')]})]\n",
-      "Done Training iteration with loss of 950.1970640566644\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -295,14 +269,15 @@
     "# nlp_annot = spacy.load(\"../training/ner_model\")\r\n",
     "# data_filtered_raw= pd.read_csv(\"../backend/input_data_filtered.csv\")\r\n",
     "# annotator = spa.Annotator(labels = [\"Condition\", \"Reference\", \"Change\", \"Timepoint\", \"Variable\"], model = nlp_annot)\r\n",
-    "# df_labels = annotator.annotate(df = data_filtered_raw[0:25], col_text = \"SecondaryOutcomeMeasure\", shuffle = True)"
+    "# df_labels = annotator.annotate(df = data_condition[0:20], col_text = \"name\", shuffle = True)\r\n",
+    "# print(list(df_labels[\"annotations\"]))"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "source": [
     "nlp_test = spacy.load(\"../training/ner_model\")"
    ],
@@ -311,27 +286,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "source": [
-    "doc = nlp_test(\"To evaluate a nutritional intervention for women newly diagnosed with breast cancer 9 weight control and physical activity program\")\r\n",
-    "print(\"Entities\", [(ent.text, ent.label_) for ent in doc.ents])"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Entities [('To evaluate a nutritional intervention', 'Change'), ('cancer 9 weight control', 'Variable'), ('physical activity program', 'Change')]\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "source": [
-    "for text, _ in data_to_train_portion:\r\n",
+    "for text, _ in data_to_train[0:50]:\r\n",
     "\r\n",
     "        target = nlp_test(text)\r\n",
     "        for entity in target.ents:\r\n",
@@ -342,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "source": [
     "\r\n",
     "from spacy.scorer import Scorer\r\n",
