--- a/training/ner_model_training.ipynb
+++ b/training/ner_model_training.ipynb
@@ -58,7 +58,7 @@
     "        \r\n",
     "    optimizer = nlp.initialize(lambda: examples)\r\n",
     "\r\n",
-    "    for i in range(40):\r\n",
+    "    for i in range(35):\r\n",
     "        random.shuffle(examples)\r\n",
     "        for batch in minibatch(examples, size = compounding(1., 32., 1.001)):\r\n",
     "            nlp.update(\r\n",
@@ -87,7 +87,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Losses:  {'ner': 4598.098713291725}\n"
+      "Losses:  {'ner': 3966.5003709342427}\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
     "\r\n",
     "    optimizer_resume = nlp.resume_training()\r\n",
     "\r\n",
-    "    for i in range(int(np.sqrt(len(train_data)))):\r\n",
+    "    for i in range(40):\r\n",
     "        random.shuffle(examples)\r\n",
     "        for batch in minibatch(examples, size = compounding(1.0, 32.0, 1.001)):\r\n",
     "            nlp.update(\r\n",
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "source": [
     "'''\r\n",
     "@author Ervin Joa\r\n",
@@ -250,41 +250,16 @@
     "    training_data = data_ref_training + data_change_training_random[0:200] + data_timepoint_training + \\\r\n",
     "    data_var_training_random[0:200] + data_condition_training_random[0:200] + train_data_init\r\n",
     "\r\n",
-    "    # Shuffeling and selecting the first 500 entries for training\r\n",
+    "    # Shuffeling and selecting the first 200 entries for training\r\n",
     "    data_to_train = random.sample(training_data, len(training_data))\r\n",
-    "    data_to_train_portion = data_to_train[0:500]\r\n",
+    "    data_to_train_portion = data_to_train[0:200]\r\n",
     "\r\n",
     "    # Training and display of the traing-loss for each session\r\n",
     "    current_loss = resume_train_ner_model(data_to_train_portion)\r\n",
     "    print(f\"Done Training iteration with loss of {current_loss}\")\r\n",
     "    "
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Done Training iteration with loss of 3780.66520294482\n",
-      "Done Training iteration with loss of 2996.661206510561\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-cfb79b7c4b1a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m     \u001b[1;31m# Training and display of the traing-loss for each session\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m     \u001b[0mcurrent_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresume_train_ner_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_to_train_portion\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Done Training iteration with loss of {current_loss}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-5-1a200c6b8eca>\u001b[0m in \u001b[0;36mresume_train_ner_model\u001b[1;34m(train_data)\u001b[0m\n\u001b[0;32m     23\u001b[0m         \u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexamples\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mbatch\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mminibatch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexamples\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msize\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompounding\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1.0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m32.0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1.001\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m             nlp.update(\n\u001b[0m\u001b[0;32m     26\u001b[0m                 \u001b[0mbatch\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m                 \u001b[0mdrop\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\spacy\\language.py\u001b[0m in \u001b[0;36mupdate\u001b[1;34m(self, examples, _, drop, sgd, losses, component_cfg, exclude, annotates)\u001b[0m\n\u001b[0;32m   1129\u001b[0m                     \u001b[1;32mand\u001b[0m \u001b[0mproc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1130\u001b[0m                 ):\n\u001b[1;32m-> 1131\u001b[1;33m                     \u001b[0mproc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfinish_update\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msgd\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1132\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mannotates\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1133\u001b[0m                 for doc, eg in zip(\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\spacy\\pipeline\\trainable_pipe.pyx\u001b[0m in \u001b[0;36mspacy.pipeline.trainable_pipe.TrainablePipe.finish_update\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\thinc\\model.py\u001b[0m in \u001b[0;36mfinish_update\u001b[1;34m(self, optimizer)\u001b[0m\n\u001b[0;32m    325\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mnode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparam_names\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    326\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mnode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhas_grad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 327\u001b[1;33m                     param, grad = optimizer(\n\u001b[0m\u001b[0;32m    328\u001b[0m                         \u001b[1;33m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mid\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_param\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_grad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    329\u001b[0m                     )\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\thinc\\optimizers.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, key, weights, gradient, lr_scale)\u001b[0m\n\u001b[0;32m    241\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    242\u001b[0m             \u001b[0mweights\u001b[0m \u001b[1;33m-=\u001b[0m \u001b[0mlr_scale\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlearn_rate\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 243\u001b[1;33m         \u001b[0mgradient\u001b[0m \u001b[1;33m*=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    244\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mL2\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mL2_is_weight_decay\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    245\u001b[0m             \u001b[0mweights\u001b[0m \u001b[1;33m-=\u001b[0m \u001b[0mlr_scale\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlearn_rate\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mL2\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mweights\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -296,137 +271,16 @@
     "#annotator = spa.Annotator(labels = [\"Condition\", \"Reference\", \"Change\", \"Timepoint\", \"Variable\"], model = nlp_annot)\r\n",
     "#df_labels = annotator.annotate(df = data_filtered_raw[0:50], col_text = \"PrimaryOutcomeMeasure\", shuffle = True)\r\n"
    ],
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "092e3a7a52c84567be0bf7fd7cde921f"
-      },
-      "text/plain": [
-       "HTML(value='-1 examples annotated, 51 examples left')"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "97201effca144808a8e9bd186bed5021"
-      },
-      "text/plain": [
-       "Text(value='', description='Condition', layout=Layout(width='auto'), placeholder='ent one, ent two, ent three'…"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "455f91af90f14e99804a5b02a66a1b70"
-      },
-      "text/plain": [
-       "Text(value='', description='Reference', layout=Layout(width='auto'), placeholder='ent one, ent two, ent three'…"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "356c70dd5bfe411b85cdd3b3a6c66c85"
-      },
-      "text/plain": [
-       "Text(value='', description='Change', layout=Layout(width='auto'), placeholder='ent one, ent two, ent three')"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "9f2313aef635426682d881aa218c1364"
-      },
-      "text/plain": [
-       "Text(value='', description='Timepoint', layout=Layout(width='auto'), placeholder='ent one, ent two, ent three'…"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "5aed558b8f564f22a85d3f7c7a977e52"
-      },
-      "text/plain": [
-       "Text(value='', description='Variable', layout=Layout(width='auto'), placeholder='ent one, ent two, ent three')"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "71bc79198e1341b8ac6e5f13a1391572"
-      },
-      "text/plain": [
-       "HBox(children=(Button(button_style='success', description='submit', style=ButtonStyle()), Button(button_style=…"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "35c59f20243842268343a74654d7e0d0"
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {}
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "print(list(df_labels[\"annotations\"]))"
+    "#print(list(df_labels[\"annotations\"]))"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['', '', ('Number of patients who died for fournier gangrene', {'entities': [(32, 49, 'Condition'), (0, 18, 'Change')]}), ('Cheeks appearance', {'entities': [(0, 17, 'Reference')]}), ('Number of patients without intubation', {'entities': [(0, 18, 'Change'), (27, 37, 'Variable')]}), '', '', ('Percentage of Participants With Serious Adverse Events (SAEs) and Serious Adverse Drug Reactions (SADRs)|Percentage of Participants With Unexpected Adverse Events (AEs) and Adverse Drug Reactions (ADRs) Not Mentioned in Precautions|Percentage of Participants With Expected/Already Known ADRs at Week 13|Percentage of Participants With Expected/Already Known ADRs at Week 26|Percentage of Participants With Expected/Already Known ADRs at Week 39|Percentage of Participants With Expected/Already Known ADRs at Week 52|Percentage of Participants With Expected/Already Known ADRs at Week 153|Percentage of Participants With Non-serious ADRs|Percentage of Participants With Abnormal Laboratory Findings Reported as AEs', {'entities': [(0, 26, 'Change'), (32, 61, 'Variable'), (137, 168, 'Variable'), (173, 202, 'Variable'), (264, 291, 'Variable'), (335, 362, 'Variable'), (406, 433, 'Variable'), (477, 504, 'Variable'), (548, 575, 'Variable'), (669, 697, 'Variable')]}), '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -495,7 +349,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
+   "hash": "aa103bc93a6207848fa67a1515d71b9e40ee492733cad84c02b8df8f3c6dbc5a"
   },
   "kernelspec": {
    "name": "python3",
