Bug fixes, training updates
- added check if no input-data files are present, frontend receives error
- training updated with more training-data
- now the app uses the whole dataset, instead of prototype-data
- removed obsolete code and todos
- removed old-database

--- a/training/ner_model_training.ipynb
+++ b/training/ner_model_training.ipynb
@@ -58,7 +58,7 @@
     "        \r\n",
     "    optimizer = nlp.initialize(lambda: examples)\r\n",
     "\r\n",
-    "    for i in range(35):\r\n",
+    "    for i in range(50):\r\n",
     "        random.shuffle(examples)\r\n",
     "        for batch in minibatch(examples, size = compounding(1., 32., 1.001)):\r\n",
     "            nlp.update(\r\n",
@@ -87,7 +87,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Losses:  {'ner': 3966.5003709342427}\n"
+      "Losses:  {'ner': 7360.019748842504}\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
     "\r\n",
     "    optimizer_resume = nlp.resume_training()\r\n",
     "\r\n",
-    "    for i in range(40):\r\n",
+    "    for i in range(50):\r\n",
     "        random.shuffle(examples)\r\n",
     "        for batch in minibatch(examples, size = compounding(1.0, 32.0, 1.001)):\r\n",
     "            nlp.update(\r\n",
@@ -219,7 +219,7 @@
       "162\n",
       "17744\n",
       "64226\n",
-      "128\n"
+      "166\n"
      ]
     }
    ],
@@ -227,20 +227,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "source": [
     "'''\r\n",
     "@author Ervin Joa\r\n",
     "\r\n",
     "Main training-loop:\r\n",
     "\r\n",
-    "    While the loss of training remains above 100:\r\n",
+    "    While the number of training-iterations < 13:\r\n",
     "        continue extracting random shuffled training data and retrain the model;\r\n",
     "    else:\r\n",
     "        stop;\r\n",
     "'''\r\n",
-    "\r\n",
-    "while current_loss > 100:\r\n",
+    "num_training_iter = 1\r\n",
+    "while num_training_iter < 13:\r\n",
     "    # Due to huge amount of data, randomize and select first 200 entries\r\n",
     "    data_var_training_random = random.sample(data_var_training, len(data_var_training))\r\n",
     "    data_change_training_random = random.sample(data_change_training, len(data_change_training))\r\n",
@@ -256,36 +256,56 @@
     "\r\n",
     "    # Training and display of the traing-loss for each session\r\n",
     "    current_loss = resume_train_ner_model(data_to_train_portion)\r\n",
-    "    print(f\"Done Training iteration with loss of {current_loss}\")\r\n",
+    "    print(f\"Done Training iteration Nr. {num_training_iter} with loss of {current_loss}\")\r\n",
+    "    num_training_iter+=1\r\n",
     "    "
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Done Training iteration Nr. 1 with loss of 2013.4113780450427\n",
+      "Done Training iteration Nr. 2 with loss of 1357.6342284368584\n",
+      "Done Training iteration Nr. 3 with loss of 1204.856180195764\n",
+      "Done Training iteration Nr. 4 with loss of 2433.1295480651015\n",
+      "Done Training iteration Nr. 5 with loss of 1023.5343853746149\n",
+      "Done Training iteration Nr. 6 with loss of 917.3612323536224\n",
+      "Done Training iteration Nr. 7 with loss of 1383.8859694506614\n",
+      "Done Training iteration Nr. 8 with loss of 1200.2382164459482\n",
+      "Done Training iteration Nr. 9 with loss of 1064.7380895906474\n",
+      "Done Training iteration Nr. 10 with loss of 1383.1080160925205\n",
+      "Done Training iteration Nr. 11 with loss of 942.9519680640975\n",
+      "Done Training iteration Nr. 12 with loss of 755.0786325193556\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "source": [
-    "#nlp_annot = spacy.load(\"../training/ner_model\")\r\n",
-    "#data_filtered_raw= pd.read_csv(\"../backend/input_data_filtered.csv\")\r\n",
-    "#annotator = spa.Annotator(labels = [\"Condition\", \"Reference\", \"Change\", \"Timepoint\", \"Variable\"], model = nlp_annot)\r\n",
-    "#df_labels = annotator.annotate(df = data_filtered_raw[0:50], col_text = \"PrimaryOutcomeMeasure\", shuffle = True)\r\n"
+    "# nlp_annot = spacy.load(\"../training/ner_model\")\r\n",
+    "# data_filtered_raw= pd.read_csv(\"../backend/input_data_filtered.csv\")\r\n",
+    "# annotator = spa.Annotator(labels = [\"Condition\", \"Reference\", \"Change\", \"Timepoint\", \"Variable\"], model = nlp_annot)\r\n",
+    "# df_labels = annotator.annotate(df = data_filtered_raw[0:100], col_text = \"SecondaryOutcomeMeasure\", shuffle = True)\r\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "source": [
-    "#print(list(df_labels[\"annotations\"]))"
+    "# print(list(df_labels[\"annotations\"]))"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "source": [
     "nlp_test = spacy.load(\"../training/ner_model\")"
    ],
@@ -307,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "source": [
     "\r\n",
     "from spacy.scorer import Scorer\r\n",
@@ -349,7 +369,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "aa103bc93a6207848fa67a1515d71b9e40ee492733cad84c02b8df8f3c6dbc5a"
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
   },
   "kernelspec": {
    "name": "python3",
