Updates to training, training data and doc
- Updated documentation for some methods
- Added new entries for custom training-data
- Updated training for more epochs

--- a/training/ner_model_training.ipynb
+++ b/training/ner_model_training.ipynb
@@ -46,6 +46,8 @@
     "\r\n",
     "Init-Training of a custom NER-Model with droprate of 20%\r\n",
     "\r\n",
+    "@param: list of manually labeled training data\r\n",
+    "\r\n",
     "@return current_loss\r\n",
     "'''\r\n",
     "def train_ner_model(trainig_data_init): \r\n",
@@ -87,7 +89,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Losses:  {'ner': 7360.019748842504}\n"
+      "Losses:  {'ner': 8928.782519897488}\n"
      ]
     }
    ],
@@ -120,7 +122,7 @@
     "\r\n",
     "    for i in range(50):\r\n",
     "        random.shuffle(examples)\r\n",
-    "        for batch in minibatch(examples, size = compounding(1.0, 32.0, 1.001)):\r\n",
+    "        for batch in minibatch(examples, size = compounding(1., 32., 1.001)):\r\n",
     "            nlp.update(\r\n",
     "                batch,\r\n",
     "                drop=0.2,\r\n",
@@ -139,6 +141,19 @@
    "cell_type": "code",
    "execution_count": 6,
    "source": [
+    "'''\r\n",
+    "@author Ervin Joa\r\n",
+    "\r\n",
+    "This method transformes a feature to the curresponding\r\n",
+    "GOD-standard set of items, which will be used\r\n",
+    "for SpaCys training.\r\n",
+    "\r\n",
+    "@param datadf: unput dataframe with the feature\r\n",
+    "@param label: label to be given for entry\r\n",
+    "@param colname: column name of the feature in the input dataframe\r\n",
+    "\r\n",
+    "@return list\r\n",
+    "'''\r\n",
     "def from_csv_to_train_data(datadf, label, colname):\r\n",
     "    output = []\r\n",
     "    datadf[colname] = datadf[colname].astype(str)\r\n",
@@ -157,6 +172,20 @@
    "cell_type": "code",
    "execution_count": 7,
    "source": [
+    "'''\r\n",
+    "@author Ervin Joa\r\n",
+    "\r\n",
+    "Method fpr creating a new feature, with which the number\r\n",
+    "of words per entry will be filtered.\r\n",
+    "The goal is to avoid training large sentances, which can\r\n",
+    "overfit the model and to only train keywords or entities whith\r\n",
+    "multiple words beloging to it. e.g. \"Type 2 Diabetes\"\r\n",
+    "\r\n",
+    "@param df: dataframe containing the feature\r\n",
+    "@param colname: column name of the feature in the input dataframe\r\n",
+    "\r\n",
+    "@return filtered dataframe\r\n",
+    "'''\r\n",
     "def filter_dataframe_count(df, col_name):\r\n",
     "    df['word_count'] = df[col_name].str.split().str.len()\r\n",
     "    df_new = df[(df['word_count'] <= 4) & (df['word_count'] > 1)].drop(columns=[\"word_count\"], axis=0)\r\n",
@@ -170,12 +199,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "source": [
+    "# import of the extracted data from ACCT\r\n",
     "data_vars = pd.read_csv(\"../training/training_data/varaible_data.csv\")\r\n",
     "data_refs = pd.read_csv(\"../training/training_data/reference_data.csv\")\r\n",
     "data_timepoint_1 = pd.read_csv(\"../training/training_data/timepoint_data.csv\")\r\n",
     "data_change = pd.read_csv(\"../training/training_data/change_data.csv\")\r\n",
     "data_condition = pd.read_csv(\"../training/training_data/condition_data.csv\")\r\n",
     "\r\n",
+    "# droping empty entries\r\n",
     "data_vars.dropna(inplace=True)\r\n",
     "data_refs.dropna(inplace=True)\r\n",
     "data_timepoint_1.dropna(inplace=True)\r\n",
@@ -183,12 +214,12 @@
     "data_condition.dropna(inplace=True)\r\n",
     "\r\n",
     "# For all Files filter data-entries that are <= 4 words\r\n",
-    "\r\n",
     "data_vars = filter_dataframe_count(data_vars, data_vars.iloc[:, 0].name)\r\n",
     "data_timepoint_1 = filter_dataframe_count(data_timepoint_1, data_timepoint_1.iloc[:, 0].name)\r\n",
     "data_change = filter_dataframe_count(data_change, data_change.iloc[:, 0].name)\r\n",
     "data_condition = filter_dataframe_count(data_condition, data_condition.iloc[:, 0].name)\r\n",
     "\r\n",
+    "# Transfomration of the data to the corresponding training-format (GOLD-standard) lists\r\n",
     "data_var_training = from_csv_to_train_data(data_vars, \"Variable\", \"units_analyzed\")\r\n",
     "data_ref_training = from_csv_to_train_data(data_refs, \"Reference\", \"param_type\")\r\n",
     "data_timepoint_training = from_csv_to_train_data(data_timepoint_1, \"Timepoint\", \"target_duration\")\r\n",
@@ -202,45 +233,18 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "print(len(data_var_training))\r\n",
-    "print(len(data_ref_training))\r\n",
-    "print(len(data_timepoint_training))\r\n",
-    "print(len(data_change_training))\r\n",
-    "print(len(data_condition_training))\r\n",
-    "print(len(train_data_init))"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "663\n",
-      "13\n",
-      "162\n",
-      "17744\n",
-      "64226\n",
-      "166\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "source": [
     "'''\r\n",
     "@author Ervin Joa\r\n",
     "\r\n",
     "Main training-loop:\r\n",
     "\r\n",
-    "    While the number of training-iterations < 13:\r\n",
+    "    While the number of training-iterations < 21:\r\n",
     "        continue extracting random shuffled training data and retrain the model;\r\n",
-    "    else:\r\n",
-    "        stop;\r\n",
     "'''\r\n",
     "num_training_iter = 1\r\n",
-    "while num_training_iter < 13:\r\n",
+    "\r\n",
+    "# 20 epoch, since ner-losses typically plateu after this value\r\n",
+    "while num_training_iter < 21:\r\n",
     "    # Due to huge amount of data, randomize and select first 200 entries\r\n",
     "    data_var_training_random = random.sample(data_var_training, len(data_var_training))\r\n",
     "    data_change_training_random = random.sample(data_change_training, len(data_change_training))\r\n",
@@ -256,7 +260,7 @@
     "\r\n",
     "    # Training and display of the traing-loss for each session\r\n",
     "    current_loss = resume_train_ner_model(data_to_train_portion)\r\n",
-    "    print(f\"Done Training iteration Nr. {num_training_iter} with loss of {current_loss}\")\r\n",
+    "    print(f\"Done Training iteration epoch Nr. {num_training_iter} with loss of {current_loss}\")\r\n",
     "    num_training_iter+=1\r\n",
     "    "
    ],
@@ -265,18 +269,26 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Done Training iteration Nr. 1 with loss of 2013.4113780450427\n",
-      "Done Training iteration Nr. 2 with loss of 1357.6342284368584\n",
-      "Done Training iteration Nr. 3 with loss of 1204.856180195764\n",
-      "Done Training iteration Nr. 4 with loss of 2433.1295480651015\n",
-      "Done Training iteration Nr. 5 with loss of 1023.5343853746149\n",
-      "Done Training iteration Nr. 6 with loss of 917.3612323536224\n",
-      "Done Training iteration Nr. 7 with loss of 1383.8859694506614\n",
-      "Done Training iteration Nr. 8 with loss of 1200.2382164459482\n",
-      "Done Training iteration Nr. 9 with loss of 1064.7380895906474\n",
-      "Done Training iteration Nr. 10 with loss of 1383.1080160925205\n",
-      "Done Training iteration Nr. 11 with loss of 942.9519680640975\n",
-      "Done Training iteration Nr. 12 with loss of 755.0786325193556\n"
+      "Done Training iteration epoch Nr. 1 with loss of 2053.201431748315\n",
+      "Done Training iteration epoch Nr. 2 with loss of 1416.739391536687\n",
+      "Done Training iteration epoch Nr. 3 with loss of 1567.2378504293465\n",
+      "Done Training iteration epoch Nr. 4 with loss of 1450.479927350355\n",
+      "Done Training iteration epoch Nr. 5 with loss of 1045.8071162253398\n",
+      "Done Training iteration epoch Nr. 6 with loss of 2061.7157966570703\n",
+      "Done Training iteration epoch Nr. 7 with loss of 942.0956782751825\n",
+      "Done Training iteration epoch Nr. 8 with loss of 1024.360110468681\n",
+      "Done Training iteration epoch Nr. 9 with loss of 929.5616843582495\n",
+      "Done Training iteration epoch Nr. 10 with loss of 783.3708781466682\n",
+      "Done Training iteration epoch Nr. 11 with loss of 493.1286495073215\n",
+      "Done Training iteration epoch Nr. 12 with loss of 819.1708668245018\n",
+      "Done Training iteration epoch Nr. 13 with loss of 1254.6247862063992\n",
+      "Done Training iteration epoch Nr. 14 with loss of 1031.9637345997496\n",
+      "Done Training iteration epoch Nr. 15 with loss of 808.4945205881385\n",
+      "Done Training iteration epoch Nr. 16 with loss of 990.6284462979227\n",
+      "Done Training iteration epoch Nr. 17 with loss of 1202.3142811761409\n",
+      "Done Training iteration epoch Nr. 18 with loss of 721.7018447036241\n",
+      "Done Training iteration epoch Nr. 19 with loss of 1257.7924796911718\n",
+      "Done Training iteration epoch Nr. 20 with loss of 802.6033510697879\n"
      ]
     }
    ],
@@ -284,75 +296,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "# For the usage of the SpaCy annotator\r\n",
+    "\r\n",
+    "#nlp_annot = spacy.load(\"../training/ner_model\")\r\n",
+    "#data_filtered_raw= pd.read_csv(\"../backend/input_data_filtered.csv\")\r\n",
+    "#annotator = spa.Annotator(labels = [\"Condition\", \"Reference\", \"Change\", \"Timepoint\", \"Variable\"], model = nlp_annot)\r\n",
+    "#df_labels = annotator.annotate(df = data_filtered_raw[0:100], col_text = \"PrimaryOutcomeMeasure\", shuffle = True)\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "source": [
-    "# nlp_annot = spacy.load(\"../training/ner_model\")\r\n",
-    "# data_filtered_raw= pd.read_csv(\"../backend/input_data_filtered.csv\")\r\n",
-    "# annotator = spa.Annotator(labels = [\"Condition\", \"Reference\", \"Change\", \"Timepoint\", \"Variable\"], model = nlp_annot)\r\n",
-    "# df_labels = annotator.annotate(df = data_filtered_raw[0:100], col_text = \"SecondaryOutcomeMeasure\", shuffle = True)\r\n"
+    "#print(list(df_labels[\"annotations\"]))"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "source": [
-    "# print(list(df_labels[\"annotations\"]))"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "source": [
-    "nlp_test = spacy.load(\"../training/ner_model\")"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "for text, _ in data_to_train[0:50]:\r\n",
-    "\r\n",
-    "        target = nlp_test(text)\r\n",
-    "        for entity in target.ents:\r\n",
-    "                displacy.render(nlp_test(target.text), style='ent')"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "source": [
     "\r\n",
     "from spacy.scorer import Scorer\r\n",
     "\r\n",
-    "def evaluate( examples):\r\n",
+    "def evaluate(data):\r\n",
     "    ner_model = spacy.load(\"../training/ner_model\")\r\n",
-    "    scorer = Scorer()\r\n",
+    "    scorer = Scorer(ner_model)\r\n",
     "\r\n",
+    "    example = []\r\n",
+    "    for input_, annot in data:\r\n",
+    "        pred = ner_model(input_)\r\n",
+    "        temp = Example.from_dict(pred, dict.fromkeys(annot))\r\n",
+    "        example.append(temp)\r\n",
+    "    scores = scorer.score(example)\r\n",
     "\r\n",
-    "    examples = []\r\n",
-    "    for text, annots in examples:\r\n",
-    "        predicted=ner_model(text)\r\n",
-    "        example=Example.from_dict(predicted, annots)\r\n",
-    "        examples.append(example)\r\n",
-    "    scores = scorer.score(examples)\r\n",
     "    return scores\r\n",
     "\r\n",
-    "examples = [\r\n",
-    "    ('The main outcome is the comparison of total volumetric bone mineral density (vBMD) at the tibia and distal radius',[(9,16, \"Change\"), (24, 34, \"Reference\"),(38,82, \"Variable\")]),\r\n",
-    "    (\"Number of Participants with undiagnosed type 2 diabetes\", [(0, 22,\"Change\"), (40, 55, \"Condition\")]),\r\n",
-    "    (\"2 months\", [(0,8,\"Timepoint\")])\r\n",
-    "]\r\n",
+    "data_to_eval_full = data_ref_training + data_change_training_random + data_timepoint_training + \\\r\n",
+    "    data_var_training_random + data_condition_training_random + train_data_init\r\n",
     "\r\n",
+    "# Shuffeling and selecting 50% of the data to evaluate the model\r\n",
+    "data_to_eval = random.sample(training_data, len(training_data)//2)\r\n",
     "\r\n",
-    "results = evaluate(examples)\r\n",
+    "results = evaluate(data_to_eval)\r\n",
     "print(results)"
    ],
    "outputs": [
@@ -360,7 +351,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'token_acc': None, 'token_p': None, 'token_r': None, 'token_f': None, 'sents_p': None, 'sents_r': None, 'sents_f': None, 'tag_acc': None, 'pos_acc': None, 'morph_acc': None, 'morph_per_feat': None, 'dep_uas': None, 'dep_las': None, 'dep_las_per_type': None, 'ents_p': None, 'ents_r': None, 'ents_f': None, 'ents_per_type': None, 'cats_score': 0.0, 'cats_score_desc': 'macro F', 'cats_micro_p': 0.0, 'cats_micro_r': 0.0, 'cats_micro_f': 0.0, 'cats_macro_p': 0.0, 'cats_macro_r': 0.0, 'cats_macro_f': 0.0, 'cats_macro_auc': 0.0, 'cats_f_per_type': {}, 'cats_auc_per_type': {}}\n"
+      "{'token_acc': 1.0, 'token_p': 1.0, 'token_r': 1.0, 'token_f': 1.0, 'ents_p': None, 'ents_r': None, 'ents_f': None, 'ents_per_type': None}\n"
      ]
     }
    ],
